--- a/.github/workflows/nonproduction.yaml
+++ b/.github/workflows/nonproduction.yaml
@@ -29,5 +29,5 @@ jobs:
           npm run build
       - name: Deploy bundle to bucket
         run: |
-            echo 'copying files to s3 bucket'
+            echo copying files to s3 bucket
             aws s3 cp public s3://${{ env.BUCKET_NAME }}/ --recursive --acl public-read
